[gd_scene load_steps=4 format=3 uid="uid://d011trtcheu4c"]

[ext_resource type="Script" uid="uid://cos1bq2x1ak51" path="res://Auotoloads/Maestro/maestro.gd" id="1_ica8m"]
[ext_resource type="AudioStream" uid="uid://cg0uq4wapiked" path="res://Audio Files/Metronome Click.wav" id="2_vluqj"]

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_na6xd"]

[node name="Maestro" type="Node"]
script = ExtResource("1_ica8m")
metronomeIsOn = true
metronomeLeadInBeats = 1

[node name="Metronome" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPolyphonic_na6xd")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vluqj")

[node name="MainSong" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="OffsetSong" type="AudioStreamPlayer" parent="."]
